fix a little more of this crazyness
git-svn-id: http://svn.vuze.com/public/client@20798 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2